--- a/U6_A2/index.htm
+++ b/U6_A2/index.htm
@@ -55,7 +55,7 @@
 </div>
 
 <div class="quote">
-  <h1>ICTSolutions</h1>
+  <h1>gfadgjadfkg</h1>
 <!--Add an image here and some random bullshit quote like along with the ict solutions logo  -->
 
 </div>
